fix code highlighting css

--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ kramdown:
   input: GFM
   syntax_highlighter: rouge
   syntax_highlighter_opts:
-    css_class: 'highlight'
+    css_class: 'codehilite'
 
 lsi: false
 excerpt_separator: "\n\n"
