--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ start_time: 540  # 9:00
 source: .
 destination: ./_site
 plugins_dir: ./_plugins
-layouts_dir: ./_layouts
+layouts_dir: ./jekyll-common/layouts
+includes_dir: ./jekyll-common/includes
 data_dir: ./_data
 
 # handling reading
