--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-# vim temporary files
-.*.sw?
-
-_drafts/
-_site/
-.sass-cache
-*~
+/_build
+/venv
+.ipynb_checkpoints
+venv*
+jupyter_execute
+.jupyter_cache/
