--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Sphinx
 sphinx_rtd_theme
 myst_nb
+git+https://github.com/rkdarst/sphinx-copybutton.git@exclude-unselectable-3
 sphinx-lesson
 sphinx_rtd_theme_ext_color_contrast
 https://github.com/coderefinery/sphinx-coderefinery-branding/archive/master.zip
